# videoConcat

./: .gitignore  README.md  main.py  pyproject.toml  update_checker.py  version.py
src/: TracksView.py  __init__.py  debug_manager.py  preview_window.py  tracks_view.py  video_editor.py  video_player.py  video_preview_item.py  widget_logger.py
src/UI/: color.py  progress_bar.py
src/ffmpeg_extractor/: __init__.py  extractors.py  tools.py
src/options/: __init__.py  options.py
src/preview_components/: __init__.py  preview_window.py  scene.py  timeline_renderer.py  video_preview_item.py
src/schemas/: __init__.py  clip_data.py
src/updater/: __init__.py  update_checker.py
src/utils/: __init__.py  file_names_extraction.py
src/workers/: __init__.py  concatenator.py  file_analyzer.py  preview_workers_manager.py  storyboard_creator.py
