[tool.poetry]
name = "videoconcat"
version = "0.1.0"
description = ""
authors = ["bob <bobsunnet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
moviepy = "^2.1.2"
pyqt6 = "^6.8.1"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
